minor updates to results page

--- a/index.html
+++ b/index.html
@@ -327,10 +327,11 @@
                   Insulin:Carbohydrate Ratio
               </h2>
           </div>
-          <div data-controltype="textblock">
-              <p id="calculation_result_text" style="text-align: center;" data-mce-style="text-align: center;">
-                  
-              </p>
+          <div class="results_wrapper">
+          	Your Insulin to Carbohydrate ratio is:
+	          <div data-controltype="textblock">
+	          		<p id="calculation_result_text" style="text-align: center;" data-mce-style="text-align: center;"></p>
+	          </div>
           </div>
           <a data-role="button" href="#page4" data-icon="info" data-iconpos="left">
               Learn More
