--- a/index.html
+++ b/index.html
@@ -63,19 +63,20 @@
           </div>
           <div data-controltype="textblock">
               <h2 data-mce-style="text-align: center;" style="text-align: center;">
-                  <span style="color: #5c89c7" data-mce-style="color: #5c89c7;">
+                  <span style="color: #fff" data-mce-style="color: #fff;">
                       Are you ready to take control of your diabetes and your life?
                   </span>
               </h2>
+              
               <p>
-                  <span style="color: #939598;" data-mce-style="color: #939598;">
+                  <span style="color: #fff;" data-mce-style="color: #fff;">
                       <br>
                   </span>
               </p>
           </div>
           <div data-controltype="textblock">
               <p style="text-align: center;" data-mce-style="text-align: center;">
-                  <span style="font-size: small; color: #5c89c7;">
+                  <span style="font-size: small; color: #fff;">
                       <span id="_mce_caret" data-mce-bogus="1">
                           <span data-mce-bogus="1">
                               ﻿
@@ -84,9 +85,9 @@
                       By using this app you are agreeing to the
                   </span>
                   <br>
-                  <span style="font-size: small; color: rgb(255, 255, 255);">
+                  <span style="font-size: small; color: #fff;">
                       <a href="#terms" data-mce-href="#terms">
-                          <span style="color: #5c89c7;">
+                          <span style="color: #fff;">
                               Terms and Conditions
                           </span>
                       </a>
@@ -109,7 +110,7 @@
           class="ui-btn-right">
           </a>
           <h3>
-              Unit of Measurement (1/6)
+              Unit of Measurement
           </h3>
       </div>
       <div data-role="content">
@@ -119,9 +120,9 @@
               </h2>
           </div>
           <div data-controltype="textblock">
-              <p style="text-align: center;">
+              <p style="text-align: center;color:#fff">
                   <span>
-                      Please select the method you normally measure in
+                  	Select the method you measure in.
                   </span>
               </p>
           </div>
@@ -152,17 +153,17 @@
           <a data-role="button" data-direction="reverse"  data-transition="slide" href="#page4" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left">
           </a>
           <h3>
-              Your ISF/CF (2/6)
+              Your ISF/CF
           </h3>
       </div>
       <div data-role="content">
           <div data-controltype="textblock">
               <h2 style="text-align: center;" data-mce-style="text-align: center;">
-                  Your ISF / CF&nbsp;
+                  Your ISF/CF
               </h2>
           </div>
           <div data-controltype="textblock">
-              <p style="text-align: center;" data-mce-style="text-align: center;">
+              <p style="text-align: center;color:#fff;" data-mce-style="text-align: center;">
                   Your ISF or CF is the amount by which 1 unit of Rapid (mealtime) Insulin
                   will lower your blood sugar.
               </p>
@@ -189,7 +190,7 @@
           href="#page5" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left">
           </a>
           <h3>
-              Before Meal Blood Sugar (3/6)
+              Before Meal Blood Sugar
           </h3>
       </div>
       <div data-role="content">
@@ -225,7 +226,7 @@
           href="#page6" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left">
           </a>
           <h3>
-              After meal blood sugar (4/6)
+              After meal blood sugar
           </h3>
       </div>
       <div data-role="content">
@@ -258,7 +259,7 @@
           href="#page7" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left">
           </a>
           <h3>
-              Units of Rapid Insulin (5/6)
+              Units of Rapid Insulin
           </h3>
       </div>
       <div data-role="content">
@@ -269,7 +270,7 @@
           </div>
           <div data-controltype="textblock">
               <p style="text-align: center;" data-mce-style="text-align: center;">
-                  Number of units of Rapid (mealtime) insulin given for your meal.
+                  Number of units of Rapid (mealtime) Insulin given for your meal.
               </p>
           </div>
           <div data-role="fieldcontain" data-controltype="textinput">
@@ -291,7 +292,7 @@
           class="ui-btn-right">
           </a>
           <h3>
-              Units of Rapid Insulin (5/6)
+              Units of Rapid Insulin
           </h3>
       </div>
       <div data-role="content">
@@ -310,7 +311,7 @@
           </div>
           <a data-role="button" class="input-needs-validation" id="calc_levels" data-theme="d" href="#page10" data-icon="arrow-r"
           data-iconpos="right">
-              Calculate!
+              Calculate
           </a>
       </div>
   </div>
@@ -337,7 +338,7 @@
                   
               </p>
           </div>
-          <p style="text-align:center;">1 unit of Rapid (mealtime) Insulin for every 7 grams of Carbohydrates</p>
+          <p style="text-align:center;">1 unit of Rapid (mealtime) Insulin for every <span id="calculation_result_text2">##</span> grams of Carbohydrates</p>
           <a data-role="button" href="#page11" data-icon="info" data-iconpos="left">
               Learn More
           </a>
@@ -516,7 +517,7 @@
                   <span style="font-size: small;" data-mce-style="font-size: small;">
                       <span class="Apple-tab-span">
                       </span>
-                      A.
+                      B.
                       <b>
                           Use of the Mobile App
                       </b>
@@ -612,7 +613,7 @@
                   <span style="font-size: small;" data-mce-style="font-size: small;">
                       <span class="Apple-tab-span">
                       </span>
-                      A.
+                      C.
                       <b>
                           License Limitations
                       </b>
@@ -1187,7 +1188,7 @@
                               <br>
                           </strong>
                           1 unit of Rapid (mealtime) insulin lowers your blood sugar 2 mmol, your
-                          ISF or Cf is 1:2
+                          ISF or CF is 1:2
                       </p>
                   </div>
                   <hr style="height:1px; background-color:#ccc; border:0; margin-top:12px; margin-bottom:12px;">
@@ -1197,7 +1198,7 @@
                               mg/dL
                           </strong>
                           <br>
-                          1 unit of Rapid (mealtime) insulin lowers your blood sugar 2 mmol, your
+                          1 unit of Rapid (mealtime) insulin lowers your blood sugar 36 mg/dL, your
                           ISF or CF is 1:36
                       </p>
                   </div>
@@ -1268,7 +1269,7 @@
                       <p>
                           <span style="font-size: small;" data-mce-style="font-size: small;">
                               <strong>
-                                  Adult Type 2 (Adult diabetes): 54
+                                  Adult Type 2 (Adult diabetes): 36
                               </strong>
                           </span>
                           <br>
@@ -1283,7 +1284,7 @@
 						 <p>
                           <span style="font-size: small;" data-mce-style="font-size: small;">
                               <strong>
-                                  Adult Type 1.5 (Adult diabetes): 3
+                                  Adult Type 1.5 (Adult diabetes): 54
                               </strong>
                           </span>
                           <br>
@@ -1303,7 +1304,7 @@
                           <br>
                           <em>
                               <span style="font-size: small;" data-mce-style="font-size: small;">
-                                  This value may require adjusting for some Type 2 individuals.
+                                  This value may require adjusting for some Type 1 individuals.
                               </span>
                           </em>
                       </p>
@@ -1342,11 +1343,11 @@
               </div>
               <div data-role="collapsible">
                   <h3>
-                      Total Grams of carbohydrates
+                      Total Grams of Carbohydrates
                   </h3>
                   <div data-controltype="textblock">
                       <p>
-                          Total grams of carbohydrates from all sources in your meal.
+                          Total grams of Carbohydrates from all sources in your meal.
                       </p>
                       <p>
                           <em>
@@ -1381,7 +1382,7 @@
                       </p>
                       <p>
                           <span style="font-size: small;">
-                              18 grams of carbohydrates
+                              18 grams of Carbohydrates
                               <br>
                               - 2 grams of fiber
                               <br>
@@ -1400,7 +1401,7 @@
                       </p>
                       <p>
                           In the vast majority of Diabetics, the same insulin to carbohydrate ratio
-                          hold true for all meals. Yet with some Diabetics, the insulin:carbohydrate
+                          holds true for all meals. Yet with some Diabetics, the insulin:carbohydrate
                           ratio may vary at different meals. Initially, use the insulin to carbohydrate
                           ratio calculator for all meals to establish correct ratio(s).
                       </p>
