--- a/index.html
+++ b/index.html
@@ -68,11 +68,6 @@
                   </span>
               </h2>
               
-              <p>
-                  <span style="color: #fff;" data-mce-style="color: #fff;">
-                      <br>
-                  </span>
-              </p>
           </div>
           <div data-controltype="textblock">
               <p style="text-align: center;" data-mce-style="text-align: center;">
@@ -1605,7 +1600,7 @@
                   </h3>
                   <div data-controltype="textblock">
                       <p>
-                          High fat content meals may produce inaccurate insulin:carbohydrate ratios.
+                          High fat content meals may produce inaccurate Insulin:Carbohydrate ratios.
                       </p>
                       <p>
                           In the vast majority of Diabetics, the same insulin to carbohydrate ratio
