--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
           <div data-controltype="textblock">
               <h2 data-mce-style="text-align: center;" style="text-align: center;">
-                  <span style="color: #5c89c7" data-mce-style="color: #5c89c7;">
+                  <span style="color: #ffffff" data-mce-style="color: #ffffff;">
                       Are you ready to take control of your diabetes and your life?
                   </span>
               </h2>
@@ -71,7 +71,7 @@
           </div>
           <div data-controltype="textblock">
               <p style="text-align: center;" data-mce-style="text-align: center;">
-                  <span style="font-size: small; color: #5c89c7;">
+                  <span style="font-size: small; color: #ffffff;">
                       <span id="_mce_caret" data-mce-bogus="1">
                           <span data-mce-bogus="1">
                               ﻿
@@ -80,9 +80,9 @@
                       By using this app you are agreeing to the
                   </span>
                   <br>
-                  <span style="font-size: small; color: #5c89c7;">
+                  <span style="font-size: small; color: #ffffff;">
                       <a href="#terms" data-mce-href="#terms">
-                          <span style="color: #5c89c7;">
+                          <span style="color: #ffffff;">
                               Terms and Conditions
                           </span>
                       </a>
@@ -115,7 +115,7 @@
               </h2>
           </div>
           <div data-controltype="textblock">
-              <p style="text-align: center;color:#5c89c7">
+              <p style="text-align: center;color:#ffffff">
                   <span>
                   	Select the method you measure in.
                   </span>
@@ -158,7 +158,7 @@
               </h2>
           </div>
           <div data-controltype="textblock">
-              <p style="text-align: center;color:#5c89c7;" data-mce-style="text-align: center;">
+              <p style="text-align: center;color:#ffffff;" data-mce-style="text-align: center;">
                   Your ISF or CF is the amount by which 1 unit of Rapid (mealtime) Insulin
                   will lower your blood sugar.
               </p>
@@ -351,7 +351,7 @@
               </h2>
           </div>
           <div data-controltype="textblock">
-              <p style="text-align: center;color:#5c89c7;" data-mce-style="text-align: center;">
+              <p style="text-align: center;color:#ffffff;" data-mce-style="text-align: center;">
                   <span>
                       Before meal blood sugar measurement should be taken within 1/2 hour of
                       your meal.
@@ -387,7 +387,7 @@
               </h2>
           </div>
           <div data-controltype="textblock">
-              <p style="text-align: center;color:#5c89c7;" data-mce-style="text-align: center;">
+              <p style="text-align: center;color:#ffffff;" data-mce-style="text-align: center;">
                   After meal blood sugar measurement should be taken within 1.5 - 2 hours from the first bite of your meal.
               </p>
           </div>
@@ -420,7 +420,7 @@
               </h2>
           </div>
           <div data-controltype="textblock">
-              <p style="text-align: center;color:#5c89c7;" data-mce-style="text-align: center;">
+              <p style="text-align: center;color:#ffffff;" data-mce-style="text-align: center;">
                   Number of units of Rapid (mealtime) Insulin given for your meal.
               </p>
           </div>
@@ -453,7 +453,7 @@
               </h2>
           </div>
           <div data-controltype="textblock">
-              <p style="text-align: center;color:#5c89c7;" data-mce-style="text-align: center;">
+              <p style="text-align: center;color:#ffffff;" data-mce-style="text-align: center;">
                   Total grams of carbohydrates from all sources in your meal.
               </p>
           </div>
@@ -468,7 +468,7 @@
                       <p>
                           <em>
                               <strong>
-                                  Example:
+                                  How to Read Food Labels:
                               </strong>
                           </em>
                       </p>
@@ -541,7 +541,7 @@
                   
               </p>
           </div>
-          <p style="text-align:center;color:#5c89c7;">1 unit of Rapid (mealtime) Insulin for every <span id="calculation_result_text2">##</span> grams of Carbohydrates</p>
+          <p style="text-align:center;color:#ffffff;">1 unit of Rapid (mealtime) Insulin for every <span id="calculation_result_text2">##</span> grams of Carbohydrates</p>
           <a data-role="button" href="#page11" data-icon="info" data-iconpos="left">
               Learn More
           </a>
@@ -610,7 +610,7 @@
                       </span>
                       The terms of this agreement (referred to herein as “Terms of Service”
                       or “Agreement”) govern the relationship between you and Caren’s Diabetes
-                      Lifeskills, Inc., located in British Columbia, Canada (“DLS”) regarding
+                      LifeSkills, Inc., located in British Columbia, Canada (“DLS”) regarding
                       your use of the DLS application for mobile devices, including its text,
                       images, information, calculations and any other content (“Mobile App”).
                   </span>
@@ -1234,7 +1234,7 @@
               <p class="p3">
                   <span style="font-size: small;" data-mce-style="font-size: small;">
                       If you have any questions regarding the Mobile App, please contact DLS
-                      at info@carbzsos.com.&nbsp;
+                      at <a href="mailto:info@carbzsos.com">info@carbzsos.com</a>.
                   </span>
               </p>
               <p class="p3">
@@ -1555,7 +1555,7 @@
                       <p>
                           <em>
                               <strong>
-                                  Example:
+                                  How to Read Food Labels:
                               </strong>
                           </em>
                       </p>
