--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                           </span>
                           <br>
                           <span style="font-size: small;">
-                              Fiber = 2 grams
+                              fibre = 2 grams
                           </span>
                           <br>
                           <span style="font-size: small;">
@@ -500,7 +500,7 @@
                           <span style="font-size: small;">
                               18 grams of Carbohydrates
                               <br>
-                              - 2 grams of fiber
+                              - 2 grams of fibre
                               <br>
                               Total grams of Carbohydrates = 16 grams
                           </span>
@@ -678,8 +678,7 @@
                       and use the Mobile App using a mobile device solely for your own non-commercial
                       educational purposes. You agree not to use the Mobile App for any other
                       purpose. DLS is the owner of the Mobile App and all intellectual property
-                      rights in and to the Mobile App. The Mobile App is the subject of Canadian,
-                      U.S. and international patents pending, and the limited license conveyed
+                      rights in and to the Mobile App. The Mobile App is the subject of Canadian and international patents pending, and the limited license conveyed
                       hereunder does not provide you any ownership or rights in the Mobile App
                       beyond the terms herein.
                   </span>
@@ -743,9 +742,8 @@
                       </span>
                       <span class="Apple-tab-span">
                       </span>
-                      1. You shall not use the Mobile App if you are located in a country where
-                      its use is not permitted by the laws of the country that regulates the
-                      web site from which you have accessed the Mobile App.
+                      1. You shall not use the Mobile App if you are located App if your are located in the USA and its territories, or in a country where
+                      it's use is not permitted by the laws of the country that regulates the web site from which you have accessed the Mobile App.
                   </span>
               </p>
               <p class="p3">
@@ -919,7 +917,7 @@
                       <span class="Apple-tab-span">
                       </span>
                       The Mobile App is designed to assist you in monitoring and calculating
-                      your insulin:carbohydrate ratio. You may use the Mobile App only after
+                      your Insulin:Carbohydrate ratio. You may use the Mobile App only after
                       you (a) have purchased the Mobile App and (b) have downloaded and installed
                       the Mobile App on your device.
                   </span>
@@ -1408,7 +1406,7 @@
               </div>
               <div data-role="collapsible">
                   <h3>
-                      ISF/CF recommendations
+                      ISF/CF Recommendations
                   </h3>
                   <div data-controltype="textblock">
                       <p>
@@ -1515,7 +1513,7 @@
               </div>
               <div data-role="collapsible">
                   <h3>
-                      Before meal blood sugar
+                      Before Meal Blood Sugar
                   </h3>
                   <div data-controltype="textblock">
                       <p>
@@ -1536,11 +1534,11 @@
               </div>
               <div data-role="collapsible">
                   <h3>
-                      Rapid (mealtime) insulin
+                      Rapid (mealtime) Insulin
                   </h3>
                   <div data-controltype="textblock">
                       <p>
-                          Number of units of Rapid (mealtime) insulin given for your meal.
+                          Number of units of Rapid (mealtime) Insulin given for your meal.
                       </p>
                   </div>
               </div>
@@ -1565,7 +1563,7 @@
                           </span>
                           <br>
                           <span style="font-size: small;">
-                              Fiber = 2 grams
+                              fibre = 2 grams
                           </span>
                           <br>
                           <span style="font-size: small;">
@@ -1587,7 +1585,7 @@
                           <span style="font-size: small;">
                               18 grams of Carbohydrates
                               <br>
-                              - 2 grams of fiber
+                              - 2 grams of fibre
                               <br>
                               Total grams of Carbohydrates = 16 grams
                           </span>
@@ -1596,7 +1594,7 @@
               </div>
               <div data-role="collapsible">
                   <h3>
-                      High Fat meals
+                      High Fat or Protein Meals
                   </h3>
                   <div data-controltype="textblock">
                       <p>
@@ -1604,7 +1602,21 @@
                       </p>
                       <p>
                           In the vast majority of Diabetics, the same insulin to carbohydrate ratio
-                          holds true for all meals. Yet with some Diabetics, the insulin:carbohydrate
+                          holds true for all meals. Yet with some Diabetics, the Insulin:Carbohydrate
+                          ratio may vary at different meals. Initially, use the insulin to carbohydrate
+                          ratio calculator for all meals to establish correct ratio(s).
+                      </p>
+                  </div>
+              </div>
+              
+              <div data-role="collapsible">
+                  <h3>
+                      Which meal should I calculate?
+                  </h3>
+                  <div data-controltype="textblock">
+                      <p>
+                          In the vast majority of Diabetics, the same insulin to carbohydrate ratio
+                          holds true for all meals. Yet with some Diabetics, the Insulin:Carbohydrate
                           ratio may vary at different meals. Initially, use the insulin to carbohydrate
                           ratio calculator for all meals to establish correct ratio(s).
                       </p>
@@ -1618,18 +1630,16 @@
                   <div data-controltype="textblock">
                       <p>
                           Adjustments to ratio may be required due to:</p>
-<ul>
-<li>Weight changes</li>
-<li>Exercise</li>
-<li>Hormonal changes</li>
-<li>Infection</li>
-<li>Stress</li>
-<li>Steroids</li>
-<li>Chemotherapy</li>
-<li>Medications</li>
-</ul>
-                      
-
+							<ul>
+							<li>Weight changes</li>
+							<li>Exercise</li>
+							<li>Hormonal changes</li>
+							<li>Infection</li>
+							<li>Stress</li>
+							<li>Steroids</li>
+							<li>Chemotherapy</li>
+							<li>Medications</li>
+							</ul>                   
 					  </div>
               </div>
 
