--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href="css/carbzsos-beta.css" rel="stylesheet">
 
     <script src="phonegap.js"></script>
-    <script src="js/jquery-1.9.1.min.js"></script>
-    <script src="js/jquery.mobile-1.3.1.min.js"></script>
+    <script src="js/jquery-1.9.1.js"></script>
+    <script src="js/jquery.mobile-1.3.1.js"></script>
     <script src="js/codiqa.ext.min.js"></script>
     <script src="js/carbzsos-beta.js"></script>
 </head>
