--- a/index.html
+++ b/index.html
@@ -1573,7 +1573,7 @@
 
               
           </div>
-          <a data-role="button" data-theme="c" href="pdf/CarbzSOS-Carb-Counting.pdf">
+          <a data-role="button" data-theme="c" href="http://mokamedia.ca/app/pdf/CarbzSOS-Carb-Counting.pdf" target="_blank">
               Carbohydrate Counting Guidelines (PDF)
           </a>
           <a data-role="button" data-theme="c" href="#terms">
