--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="css/carbzsos-beta.css" rel="stylesheet">
 
     <script src="phonegap.js"></script>
+    <script src="childbrowser.js"></script>
     <script src="js/jquery-1.9.1.js"></script>
     <script src="js/jquery.mobile-1.3.1.js"></script>
     <script src="js/codiqa.ext.min.js"></script>
@@ -1573,7 +1574,7 @@
 
               
           </div>
-          <a data-role="button" data-theme="c" href="http://mokamedia.ca/app/pdf/CarbzSOS-Carb-Counting.pdf" target="_blank">
+          <a data-role="button" data-theme="c" onClick="window.plugins.childBrowser.showWebPage('pdf/CarbzSOS-Carb-Counting.pdf');" target="_blank">
               Carbohydrate Counting Guidelines (PDF)
           </a>
           <a data-role="button" data-theme="c" href="#terms">
