--- a/index.html
+++ b/index.html
@@ -1574,7 +1574,7 @@
 
               
           </div>
-          <a data-role="button" data-theme="c" onClick="window.plugins.childBrowser.showWebPage('pdf/CarbzSOS-Carb-Counting.pdf');" target="_blank">
+          <a data-role="button" data-theme="c" onClick="window.plugins.childBrowser.showWebPage('http://mokamedia.ca/app/pdf/CarbzSOS-Carb-Counting.pdf');" target="_blank">
               Carbohydrate Counting Guidelines (PDF)
           </a>
           <a data-role="button" data-theme="c" href="#terms">
