google docs viewer - added

--- a/index.html
+++ b/index.html
@@ -1574,7 +1574,7 @@
 
               
           </div>
-          <a data-role="button" data-theme="c" onClick="window.plugins.ChildBrowser.showWebPage('http://mokamedia.ca/app/pdf/CarbzSOS-Carb-Counting.pdf');">
+          <a data-role="button" data-theme="c" onClick="window.plugins.ChildBrowser.showWebPage('https://docs.google.com/viewer?url=http://mokamedia.ca/app/pdf/CarbzSOS-Carb-Counting.pdf');">
               Carbohydrate Counting Guidelines (PDF)
           </a>
           <a data-role="button" data-theme="c" href="#terms">
