test pdf in app

--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
 
               
           </div>
-          <a data-role="button" data-theme="c" onClick="window.plugins.ChildBrowser.showWebPage('http://carbzsos.com/CarbzSOS-Carb-Counting.pdf');">
+          <a data-role="button" data-theme="c" onClick="window.plugins.ChildBrowser.showWebPage('pdf/CarbzSOS-Carb-Counting.pdf');">
               Carbohydrate Counting Guidelines (PDF)
           </a>
           <a data-role="button" data-theme="c" href="#terms">
