--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-    <title>CarbzSOS</title>
-    <meta name = "viewport" content="width=device-width, user-scalable = no" />
-    <link href="css/codiqa.ext.min.css" rel="stylesheet">
-    <link href="css/jqm-neue.css" rel="stylesheet">
-    <link href="css/carbzsos.css" rel="stylesheet">
-    <script src="phonegap.js"></script>
-    <script src="childbrowser.js"></script>
-    <script src="js/jquery-1.9.1.js"></script>
-    <script src="js/jquery.mobile-1.3.1.js"></script>
-    <script src="js/codiqa.ext.min.js"></script>
-    <script src="js/carbzsos.js"></script>
-</head>
-<body>
+    <head>
+      <meta charset="utf-8">
+        <title>CarbzSOS</title>
+        <meta name = "viewport" content="width=device-width, user-scalable = no" />
+        <link href="css/codiqa.ext.min.css" rel="stylesheet">
+        <link href="css/jqm-neue.css" rel="stylesheet">
+        <link href="css/carbzsos.css" rel="stylesheet">
+        <script src="phonegap.js"></script>
+        <script src="childbrowser.js"></script>
+        <script src="js/jquery-1.9.1.js"></script>
+        <script src="js/jquery.mobile-1.3.1.js"></script>
+        <script src="js/codiqa.ext.min.js"></script>
+        <script src="js/carbzsos.js"></script>
+
+        <script type="text/javascript">
+            $(document).one("mobileinit", function () {
+
+                // Setting #container div as a jqm pageContainer
+                $.mobile.pageContainer = $('#container');
+
+                // Setting default page transition to slide
+                $.mobile.defaultPageTransition = 'slide';
+
+            });
+        </script>
+    </head>
+    <body>
+<div id="container" />    
   <div data-role="page" data-control-title="Home" data-theme="d" id="page3">
       <div data-role="panel" id="panel4" data-position="left" data-display="push" data-theme="d">
           <ul data-role="listview" data-divider-theme="d" data-inset="false">
@@ -85,7 +98,7 @@
   </div>
   <div data-role="page" data-control-title="Select Unit of Measurement (1/6)"
   id="page4">
-      <div data-theme="b" data-role="header" data-position="fixed">
+      <div data-theme="b" data-role="header" >
           <a data-role="button" href="#page3" data-icon="back" data-iconpos="notext" class="ui-btn-left">
           </a>
           <a data-role="button" href="#page3" data-icon="home" data-iconpos="notext" class="ui-btn-right">
@@ -129,7 +142,7 @@
       </div>
   </div>
   <div data-role="page" data-control-title="Your ISF/CF (2/6)" id="page5">
-      <div data-theme="b" data-role="header" data-position="fixed">
+      <div data-theme="b" data-role="header" >
           <a data-role="button" href="#page3" data-icon="home" data-iconpos="notext" class="ui-btn-right"></a>
           <a data-role="button" data-direction="reverse"  data-transition="slide" href="#page4" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left">
           </a>
@@ -165,7 +178,7 @@
       </script>
   </div>
   <div data-role="page" data-control-title="Before Meal Blood Sugar (3/6)" id="page6">
-      <div data-theme="b" data-role="header" data-position="fixed">
+      <div data-theme="b" data-role="header" >
           <a data-role="button" href="#page3" data-icon="home" data-iconpos="notext" class="ui-btn-right">
           </a>
           <a data-role="button" data-direction="reverse" data-transition="slide" href="#page5" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left">
@@ -201,7 +214,7 @@
       </div>
   </div>
   <div data-role="page" data-control-title="After meal blood sugar (4/6)" id="page7">
-      <div data-theme="b" data-role="header" data-position="fixed">
+      <div data-theme="b" data-role="header" >
           <a data-role="button" href="#page3" data-icon="home" data-iconpos="notext" class="ui-btn-right"></a>
           <a data-role="button" data-direction="reverse" data-transition="slide" href="#page6" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left"></a>
           <h3>
@@ -232,7 +245,7 @@
       </div>
   </div>
   <div data-role="page" data-control-title="Units of Rapid (mealtime) Insulin (5/6)" id="page8">
-      <div data-theme="b" data-role="header" data-position="fixed">
+      <div data-theme="b" data-role="header" >
           <a data-role="button" href="#page3" data-icon="home" data-iconpos="notext" class="ui-btn-right">
           </a>
           <a data-role="button" data-direction="reverse" data-transition="slide" href="#page7" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left">
@@ -266,7 +279,7 @@
   </div>
   <div data-role="page" data-control-title="Total Grams of Carbohydrates (6/6)"
   id="page9">
-      <div data-theme="b" data-role="header" data-position="fixed">
+      <div data-theme="b" data-role="header" >
           <a data-role="button" data-direction="reverse" data-transition="slide" href="#page8" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left">
           </a>
           <a data-role="button" href="#page3" data-icon="home" data-iconpos="notext"
@@ -303,7 +316,7 @@
       </div>
   </div>
   <div data-role="page" data-control-title="Results" id="page10">
-      <div data-theme="b" data-role="header" data-position="fixed">
+      <div data-theme="b" data-role="header" >
           <a data-role="button" data-direction="reverse" data-transition="slide"
           href="#page9" data-icon="arrow-l" data-iconpos="notext" class="ui-btn-left">
           </a>
@@ -332,7 +345,7 @@
       </div>
   </div>
   <div data-role="page" data-control-title="Terms" id="terms">
-      <div data-theme="b" data-role="header" data-position="fixed">
+      <div data-theme="b" data-role="header" >
           <a data-role="button" href="#page3" data-icon="home" data-iconpos="notext"
           class="ui-btn-left">
           </a>
