fixed logo max width so it doesn't pixelate

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div data-role="content">
                 <div style=" text-align:center" data-controltype="image" class="logo-padding">
-                    <img style="width: 80%;" src="img/carbzsos-logo.png">
+                    <img style="width: 80%;max-width:500px;" src="img/carbzsos-logo.png">
                 </div>
                 <div data-controltype="textblock">
                     <h2 style="text-align: center;">
