fix for pdf viewing

--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
                             </div>
                     </div>
                 </div>
-                <a data-role="button" data-theme="c" onClick="window.plugins.ChildBrowser.showWebPage('http://carbzsos.com/CarbzSOS-Carb-Counting.pdf');">Carbohydrate Counting Guidelines (PDF)</a>
+                <a data-role="button" data-theme="c" onClick="window.plugins.ChildBrowser.showWebPage('https://drive.google.com/viewerng/viewer?embedded=true&url=http://carbzsos.com/CarbzSOS-Carb-Counting.pdf');">Carbohydrate Counting Guidelines (PDF)</a>
                 <a data-role="button" data-theme="c" href="#terms">Review Terms &amp; Conditions</a>
             </div>
         </div>
