--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <p style="text-align: center;color:#ffffff;">Your ISF or CF is the amount by which 1 unit of Rapid (mealtime) Insulin will lower your blood sugar.</p>
                 </div>
                 <div data-role="fieldcontain" data-controltype="textinput">
-                    <input name="textinput1" class="numeric-text" id="textinput1" placeholder="Input Value" type="number" pattern="[\d\.]*" step="0.01">
+                    <input name="textinput1" class="numeric-text" id="textinput1" placeholder="Input Value" type="text" pattern="[\d\.]*">
                 </div>
                 <a data-role="button" class="input-needs-validation large" id="isf_button" data-transition="slide" data-theme="d" href="#page6" data-icon="arrow-r" data-iconpos="right">Continue</a>
                 <a data-role="button" data-theme="c" href="#page11" class="LearnMore" data-icon="info" data-iconpos="left">Learn More</a>
@@ -146,7 +146,7 @@
                     </p>
                 </div>
                 <div data-role="fieldcontain" data-controltype="textinput">
-                    <input name="" class="numeric-text" id="textinput2" placeholder="Input Value" value="" type="number" pattern="[\d\.]*" step="0.01">
+                    <input name="" class="numeric-text" id="textinput2" placeholder="Input Value" value="" type="text" pattern="[\d\.]*">
                 </div>
                 <a data-role="button" class="input-needs-validation large" id="before_meal_blood_suger_button" data-transition="slide" data-theme="d" href="#page7" data-icon="arrow-r" data-iconpos="right">
                   Continue
@@ -180,7 +180,7 @@
                     </p>
                 </div>
                 <div data-role="fieldcontain" data-controltype="textinput">
-                    <input name="" class="numeric-text" id="textinput3" placeholder="Input Value" value="" type="number" pattern="[\d\.]*" step="0.01">
+                    <input name="" class="numeric-text" id="textinput3" placeholder="Input Value" value="" type="text" pattern="[\d\.]*">
                 </div>
                 <a data-role="button" class="input-needs-validation large" id="after_meal_blood_suger_button" data-transition="slide" data-theme="d" href="#page8" data-icon="arrow-r" data-iconpos="right">
                   Continue
@@ -216,7 +216,7 @@
                     </p>
                 </div>
                 <div data-role="fieldcontain" data-controltype="textinput">
-                    <input name="" class="numeric-text" id="textinput4" placeholder="Input Value" value="" type="number" pattern="[\d\.]*" step="0.01">
+                    <input name="" class="numeric-text" id="textinput4" placeholder="Input Value" value="" type="text" pattern="[\d\.]*">
                 </div>
                 <a data-role="button" class="input-needs-validation large" data-transition="slide" data-theme="d" href="#page9" data-icon="arrow-r" data-iconpos="right">
                   Continue
@@ -254,7 +254,7 @@
 
 
                 <div data-role="fieldcontain" data-controltype="textinput">
-                    <input name="" class="numeric-text" id="textinput5" placeholder="Input Value" value="" type="number" pattern="[\d\.]*" step="0.01">
+                    <input name="" class="numeric-text" id="textinput5" placeholder="Input Value" value="" type="text" pattern="[\d\.]*">
                 </div>
                 <a data-role="button" class="input-needs-validation large Glowing" id="calc_levels" data-theme="d" href="#page10" data-icon="arrow-r" data-iconpos="right">
                   Calculate
